force-app/main/default/objects/Equipements_du_foyer__c/Equipements_du_foyer__c.object-meta.xml
<CustomObject>
    <label>Equipement du foyer</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nom de l&apos;équipement</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Equipements du foyer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>