force-app/main/default/objects/Equipements_du_foyer__c/fields/Abonnements__c.field-meta.xml
<CustomField>
    <fullName>Abonnements__c</fullName>
    <label>Abonnements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>6</fullName>
                <label>Canal +</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Disney +</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Netflix</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>C+ 1 à 5 chaines</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>C+ 6 chaines</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Csat/Essentiel Famille</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Numéricable</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Canal Sat</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Amazon</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Salto</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Autres</label>
            </value>
            <value>
                <fullName>Bein Sport</fullName>
                <isActive>false</isActive>
                <label>Bein Sport</label>
            </value>
            <value>
                <fullName>Canal Cinéma</fullName>
                <isActive>false</isActive>
                <label>Canal Cinéma</label>
            </value>
            <value>
                <fullName>Canal Series</fullName>
                <isActive>false</isActive>
                <label>Canal Series</label>
            </value>
            <value>
                <fullName>Canal Sport</fullName>
                <isActive>false</isActive>
                <label>Canal Sport</label>
            </value>
            <value>
                <fullName>OSC</fullName>
                <isActive>false</isActive>
                <label>OSC</label>
            </value>
            <value>
                <fullName>Prime Vidéo</fullName>
                <isActive>false</isActive>
                <label>Prime Vidéo</label>
            </value>
            <value>
                <fullName>4</fullName>
                <isActive>false</isActive>
                <label>TNT payante</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>