force-app/main/default/objects/Equipements_du_foyer__c/fields/Acces_internet__c.field-meta.xml
<CustomField>
    <fullName>Acces_internet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accès Internet</label>
    <type>Checkbox</type>
</CustomField>