force-app/main/default/objects/Equipements_du_foyer__c/fields/Adresse_IP__c.field-meta.xml
<CustomField>
    <fullName>Adresse_IP__c</fullName>
    <label>Adresse IP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>