force-app/main/default/objects/Equipements_du_foyer__c/fields/Batterie__c.field-meta.xml
<CustomField>
    <fullName>Batterie__c</fullName>
    <label>Batterie</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>