force-app/main/default/objects/Equipements_du_foyer__c/fields/Capacite_hd__c.field-meta.xml
<CustomField>
    <fullName>Capacite_hd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Capacité HD</label>
    <type>Checkbox</type>
</CustomField>