force-app/main/default/objects/Equipements_du_foyer__c/fields/Combine_tv_mag__c.field-meta.xml
<CustomField>
    <fullName>Combine_tv_mag__c</fullName>
    <label>Combiné TV-MAG</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Non</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Mono Tuner</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Double Tuner</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>