force-app/main/default/objects/Equipements_du_foyer__c/fields/Connecte_a_internet__c.field-meta.xml
<CustomField>
    <fullName>Connecte_a_internet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Connecté à internet</label>
    <type>Checkbox</type>
</CustomField>