force-app/main/default/objects/Equipements_du_foyer__c/fields/Connectique__c.field-meta.xml
<CustomField>
    <fullName>Connectique__c</fullName>
    <label>Connectique</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>HDMI</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Péritel</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>NON DEFINI</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>