force-app/main/default/objects/Equipements_du_foyer__c/fields/Console_connectee_a_internet__c.field-meta.xml
<CustomField>
    <fullName>Console_connectee_a_internet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Console connectée à internet</label>
    <type>Checkbox</type>
</CustomField>