force-app/main/default/objects/Equipements_du_foyer__c/fields/Date_d_achat__c.field-meta.xml
<CustomField>
    <fullName>Date_d_achat__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date d&apos;achat</label>
    <type>Date</type>
</CustomField>