force-app/main/default/objects/Equipements_du_foyer__c/fields/Date_d_achat_du_magnetoscope__c.field-meta.xml
<CustomField>
    <fullName>Date_d_achat_du_magnetoscope__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date d&apos;achat du magnétoscope</label>
    <type>Date</type>
</CustomField>