force-app/main/default/objects/Equipements_du_foyer__c/fields/Date_d_ouverture_de_la_ligne__c.field-meta.xml
<CustomField>
    <fullName>Date_d_ouverture_de_la_ligne__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date d&apos;ouverture de la ligne</label>
    <type>Date</type>
</CustomField>