force-app/main/default/objects/Equipements_du_foyer__c/fields/Disque_dur_externe__c.field-meta.xml
<CustomField>
    <fullName>Disque_dur_externe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disque dur externe</label>
    <type>Checkbox</type>
</CustomField>