force-app/main/default/objects/Equipements_du_foyer__c/fields/DVD_enregistreur_sur_disque_dur__c.field-meta.xml
<CustomField>
    <fullName>DVD_enregistreur_sur_disque_dur__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DVD enregistreur sur disque dur</label>
    <type>Checkbox</type>
</CustomField>