force-app/main/default/objects/Equipements_du_foyer__c/fields/Ecran_3D__c.field-meta.xml
<CustomField>
    <fullName>Ecran_3D__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ecran 3D</label>
    <type>Checkbox</type>
</CustomField>