force-app/main/default/objects/Equipements_du_foyer__c/fields/Emplacement__c.field-meta.xml
<CustomField>
    <fullName>Emplacement__c</fullName>
    <label>Emplacement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Salon</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Chambre parent(s)</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Chambre enfant(s)</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Cuisine</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Autre pièce</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Bureau</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Chambre d&apos;amis</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Salle à manger</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Salle de jeux</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Séjour/salon/salle à manger</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Entrée/Couloir</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>