force-app/main/default/objects/Equipements_du_foyer__c/fields/Fluw__c.field-meta.xml
<CustomField>
    <fullName>Fluw__c</fullName>
    <label>Flux Google</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Provisionning</fullName>
            </value>
            <value>
                <fullName>Configuration équipement</fullName>
            </value>
            <value>
                <fullName>Nouvel individu</fullName>
            </value>
            <value>
                <fullName>Nouveau Meter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>