force-app/main/default/objects/Equipements_du_foyer__c/fields/Fournisseur__c.field-meta.xml
<CustomField>
    <fullName>Fournisseur__c</fullName>
    <label>Fournisseur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>Alice</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Autre fournisseur ADSL</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Autre fournisseur Fibre optique</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Autre Satellite</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Bouygues / B&amp;You</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Darty</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>FRANSAT</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Free</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Numéricâble / Noos / etc (fibre)</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Orange / Sosh</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Orange SAT</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>SFR / Red / Numéricable</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>TNT payante</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>TNT Simple</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>TNTSAT</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Virgin</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Canal / C+</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Canal / Csat</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Numéricâble / Noos / etc. (câble)</label>
            </value>
            <value>
                <fullName>ADSL</fullName>
                <isActive>false</isActive>
                <label>ADSL</label>
            </value>
            <value>
                <fullName>Cable</fullName>
                <isActive>false</isActive>
                <label>Cable</label>
            </value>
            <value>
                <fullName>Canal / C+ / Csat</fullName>
                <isActive>false</isActive>
                <label>Canal / C+ / Csat</label>
            </value>
            <value>
                <fullName>Hertzien</fullName>
                <isActive>false</isActive>
                <label>Hertzien</label>
            </value>
            <value>
                <fullName>Satellite</fullName>
                <isActive>false</isActive>
                <label>Satellite</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>