force-app/main/default/objects/Equipements_du_foyer__c/fields/Foyer__c.field-meta.xml
<CustomField>
    <fullName>Foyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Foyer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Equipements du foyer</relationshipLabel>
    <relationshipName>Equipements_du_foyer</relationshipName>
    <type>Lookup</type>
</CustomField>