force-app/main/default/objects/Equipements_du_foyer__c/fields/Foyer_paneliste__c.field-meta.xml
<CustomField>
    <fullName>Foyer_paneliste__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Foyer panéliste</label>
    <referenceTo>Foyer_paneliste__c</referenceTo>
    <relationshipLabel>Equipements du foyer</relationshipLabel>
    <relationshipName>Equipements_du_foyer</relationshipName>
    <type>Lookup</type>
</CustomField>