force-app/main/default/objects/Equipements_du_foyer__c/fields/Frequence_utilisation_tv__c.field-meta.xml
<CustomField>
    <fullName>Frequence_utilisation_tv__c</fullName>
    <label>Fréquence utilisation TV</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4</fullName>
                <label>1 à 2 fois par mois</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>1 à 2 fois par semaine</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Jamais</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Moins d&apos;une fois par mois</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>Non précisé</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Presque tous les jours</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Tous les jours</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>