force-app/main/default/objects/Equipements_du_foyer__c/fields/HD_Blu_Ray__c.field-meta.xml
<CustomField>
    <fullName>HD_Blu_Ray__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HD/Blu-Ray</label>
    <type>Checkbox</type>
</CustomField>