force-app/main/default/objects/Equipements_du_foyer__c/fields/Id_television__c.field-meta.xml
<CustomField>
    <fullName>Id_television__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>Id télévision</label>
    <type>AutoNumber</type>
</CustomField>