force-app/main/default/objects/Equipements_du_foyer__c/fields/Identifant_SIM__c.field-meta.xml
<CustomField>
    <fullName>Identifant_SIM__c</fullName>
    <label>Identifant SIM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>