force-app/main/default/objects/Equipements_du_foyer__c/fields/Lecteur_DVD_avec_TNT__c.field-meta.xml
<CustomField>
    <fullName>Lecteur_DVD_avec_TNT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lecteur DVD avec TNT</label>
    <type>Checkbox</type>
</CustomField>