force-app/main/default/objects/Equipements_du_foyer__c/fields/Marque_d_ordinateur__c.field-meta.xml
<CustomField>
    <fullName>Marque_d_ordinateur__c</fullName>
    <label>Marque d&apos;ordinateur</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Apple</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Autre marque</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>