force-app/main/default/objects/Equipements_du_foyer__c/fields/Marque_de_telephone__c.field-meta.xml
<CustomField>
    <fullName>Marque_de_telephone__c</fullName>
    <label>Marque de téléphone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>38</fullName>
                <label>Acer</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Alcatel</label>
            </value>
            <value>
                <fullName>37</fullName>
                <label>Android Edition / S by SFR</label>
            </value>
            <value>
                <fullName>35</fullName>
                <label>Apple</label>
            </value>
            <value>
                <fullName>54</fullName>
                <label>Archos</label>
            </value>
            <value>
                <fullName>58</fullName>
                <label>Asus</label>
            </value>
            <value>
                <fullName>71</fullName>
                <label>Autre marque</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Benq-Siemens</label>
            </value>
            <value>
                <fullName>68</fullName>
                <label>Blackview</label>
            </value>
            <value>
                <fullName>52</fullName>
                <label>Bouygues Telecom</label>
            </value>
            <value>
                <fullName>55</fullName>
                <label>Carrefour</label>
            </value>
            <value>
                <fullName>45</fullName>
                <label>Dell</label>
            </value>
            <value>
                <fullName>70</fullName>
                <label>Doogee</label>
            </value>
            <value>
                <fullName>42</fullName>
                <label>Doro</label>
            </value>
            <value>
                <fullName>65</fullName>
                <label>Echo</label>
            </value>
            <value>
                <fullName>46</fullName>
                <label>Eten</label>
            </value>
            <value>
                <fullName>41</fullName>
                <label>GHT</label>
            </value>
            <value>
                <fullName>53</fullName>
                <label>Google</label>
            </value>
            <value>
                <fullName>64</fullName>
                <label>Honor</label>
            </value>
            <value>
                <fullName>47</fullName>
                <label>HP</label>
            </value>
            <value>
                <fullName>34</fullName>
                <label>HTC</label>
            </value>
            <value>
                <fullName>36</fullName>
                <label>Huawei</label>
            </value>
            <value>
                <fullName>63</fullName>
                <label>Lenovo</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>LG</label>
            </value>
            <value>
                <fullName>62</fullName>
                <label>Logicom</label>
            </value>
            <value>
                <fullName>59</fullName>
                <label>Meizu</label>
            </value>
            <value>
                <fullName>48</fullName>
                <label>Mitac</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Motorola</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>NEC</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Nokia</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>