force-app/main/default/objects/Equipements_du_foyer__c/fields/Marque_du_Cast__c.field-meta.xml
<CustomField>
    <fullName>Marque_du_Cast__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Marque du Cast</label>
    <length>250</length>
    <type>Text</type>
</CustomField>