force-app/main/default/objects/Equipements_du_foyer__c/fields/Marque_Objet_Connecte__c.field-meta.xml
<CustomField>
    <fullName>Marque_Objet_Connecte__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Marque Objet Connecté</label>
    <length>50</length>
    <type>Text</type>
</CustomField>