force-app/main/default/objects/Equipements_du_foyer__c/fields/Marque_Tablette__c.field-meta.xml
<CustomField>
    <fullName>Marque_Tablette__c</fullName>
    <label>Marque Tablette</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>2</fullName>
                <label>Acer</label>
            </value>
            <value>
                <fullName>32</fullName>
                <label>Alcatel</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Amazon / Kindle Fire</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Apple</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Archos</label>
            </value>
            <value>
                <fullName>38</fullName>
                <label>Arnova</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Asus</label>
            </value>
            <value>
                <fullName>58</fullName>
                <label>Autre marque</label>
            </value>
            <value>
                <fullName>33</fullName>
                <label>Boulanger</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>Carrefour</label>
            </value>
            <value>
                <fullName>37</fullName>
                <label>Danew</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Dell</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Fnac / Kobo Arc</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>Foodle</label>
            </value>
            <value>
                <fullName>34</fullName>
                <label>Fujitsu</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>Gonomad</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Google</label>
            </value>
            <value>
                <fullName>40</fullName>
                <label>Haier</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Hannspree</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>HP</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>HTC</label>
            </value>
            <value>
                <fullName>39</fullName>
                <label>Huawei</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>IT Works</label>
            </value>
            <value>
                <fullName>55</fullName>
                <label>Jolla</label>
            </value>
            <value>
                <fullName>54</fullName>
                <label>JXD</label>
            </value>
            <value>
                <fullName>56</fullName>
                <label>Kliver</label>
            </value>
            <value>
                <fullName>36</fullName>
                <label>Lazer</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Lenovo</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>LG</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>Logicom</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>